Ingress/backendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendapp
spec:
   ports:
   - port: 8000
     protocol: TCP
     targetPort: 8000
   selector:
     app: app1
   type: NodePort
