Ingress/ingress-file.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "app-ingress"
  namespace: "application"
  labels: 
    app: app-ingress
  annotations:
    
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: devpriyachatapp.ml
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backendapp
                port:
                  number: 8000
